--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <img src="images/perfil.jpeg" alt="Imagen de Perfil">
+  <img src="perfil.jpeg" alt="Imagen de Perfil">
 
   <div class="float">
     <h1>Eliana Orellano</h1>
